--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src="images/logo.svg" alt="Easybank">
       </a>
 
-      <a href="#" class="header__menu hide-for-desktop">
+      <a id="btnHamburger" href="#" class="header__menu hide-for-desktop">
         <span></span>
         <span></span>
         <span></span>
