--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
   <header class="header">
 
+    <div class="overlay"></div>
+
     <nav class="flex jc-sb ai-c">
     
       <a href="/" class="header__logo">
@@ -37,14 +39,36 @@
 
       <a href="#" class="button header__cta hide-for-mobile">Request Invite</a>
     </nav>
+
+    <nav class="mobile-menu hide-for-desktop">
+
+      <ul>
+        <li>
+          <a href="">Home</a>
+        </li>
+        <li>
+          <a href="">About</a>
+        </li>
+        <li>
+          <a href="">Contact</a>
+        </li>
+        <li>
+          <a href="">Blog</a>
+        </li>
+        <li>
+          <a href="">Careers</a>
+        </li>
+      </ul>
+
+    </nav>
     
   </header>
 
-  <!-- Home
-  About
-  Contact
-  Blog
-  Careers
+  
+  
+  
+  
+  
 
   Request Invite
 
@@ -120,7 +144,7 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  </div>
 
   <script src="app/js/script.js"></script>
 </body>
