--- a/index.html
+++ b/index.html
@@ -121,37 +121,87 @@
     </section>
 
     <section class="articles">
-      <div class="container">
+      <div class="container ">
+        <h2>Latest Articles</h2>
+
+        <div  class="articles-cards">
+
+          <div class="card">
+
+            <div class="illustration">
+              <img src="images/image-currency.jpg" alt="currency picture">
+            </div>
+
+            <div class="card-content">
+              <p class="author">By Claire Robinson</p>
+              <h3 class="articles-title">Receive money in any currency with no fees</h3>
+              <p class="article-abstract">
+                The world is getting smaller and we’re becoming more mobile. So why should you be
+                forced to only receive money in a single …
+              </p>
+            </div>
+
+          </div>
+
+          <div class="card">
+
+            <div class="illustration">
+              <img src="images/image-restaurant.jpg" alt="restaurant picture">
+            </div>
+
+            <div class="card-content">
+              <p class="author">By Wilson Hutton</p>
+              <h3 class="articles-title">Treat yourself without worrying about money</h3>
+              <p class="article-abstract">
+                Our simple budgeting feature allows you to separate out your spending and set
+                realistic limits each month. That means you …
+              </p>
+            </div>
+
+          </div>
+
+          <div class="card">
+
+            <div class="illustration">
+              <img src="images/image-plane.jpg" alt="plane picture">
+            </div>
+
+            <div class="card-content">
+              <p class="author">By Wilson Hutton</p>
+              <h3 class="articles-title">Take your Easybank card wherever you go</h3>
+              <p class="article-abstract">
+                We want you to enjoy your travels. This is why we don’t charge any fees on purchases
+                while you’re abroad. We’ll even show you …
+              </p>
+            </div>
+
+          </div>
+
+          <div class="card">
+
+            <div class="illustration">
+              <img src="images/image-confetti.jpg" alt="confetti picture">
+            </div>
+
+            <div class="card-content">
+              <p class="author">By Claire Robinson</p>
+              <h3 class="articles-title">Our invite-only Beta accounts are now live!</h3>
+              <p class="article-abstract">
+                After a lot of hard work by the whole team, we’re excited to launch our closed beta.
+                It’s easy to request an invite through the site ...
+              </p>
+            </div>
+
+          </div>
+          
+        </div>
 
       </div>
     </section>
   </main>
 
 
-  <!-- Latest Articles
-
-  By Claire Robinson
-  Receive money in any currency with no fees
-  The world is getting smaller and we’re becoming more mobile. So why should you be
-  forced to only receive money in a single …
-
-  By Wilson Hutton
-  Treat yourself without worrying about money
-  Our simple budgeting feature allows you to separate out your spending and set
-  realistic limits each month. That means you …
-
-  By Wilson Hutton
-  Take your Easybank card wherever you go
-  We want you to enjoy your travels. This is why we don’t charge any fees on purchases
-  while you’re abroad. We’ll even show you …
-
-  By Claire Robinson
-  Our invite-only Beta accounts are now live!
-  After a lot of hard work by the whole team, we’re excited to launch our closed beta.
-  It’s easy to request an invite through the site ...
-
-
-
+  <!--
   About Us
   Contact
   Blog
