footer structure done

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             your finances like never before.
           </p>
         </div>
-        
+
         <div class="presentation-boxes">
           <div class="box">
             <img src="images/icon-online.svg" alt="Online Banking Icon">
@@ -124,7 +124,7 @@
       <div class="container ">
         <h2>Latest Articles</h2>
 
-        <div  class="articles-cards">
+        <div class="articles-cards">
 
           <div class="card">
 
@@ -193,30 +193,58 @@
             </div>
 
           </div>
-          
         </div>
-
       </div>
     </section>
   </main>
 
+  <footer>
+    <div class="container">
+      <div>
+        <div class="logosocials">
+          <a href="/" class="footer__logo">
+            <object type="image/svg+xml" data="images/logo.svg" style="fill: #fff"></object>
+          </a>
+          <div class="socials">
+            <img src="images/icon-facebook.svg" alt="facebook icon">
+            <img src="images/icon-youtube.svg" alt="youtube icon">
+            <img src="images/icon-twitter.svg" alt="twitter icon">
+            <img src="images/icon-pinterest.svg" alt="pinterest icon">
+            <img src="images/icon-instagram.svg" alt="instagram icon">
+          </div>
+        </div>
 
-  <!--
-  About Us
-  Contact
-  Blog
-  Careers
-  Support
-  Privacy Policy
+        <div class="footer-links">
+          <ul>
+            <li><a href="/">About Us</a></li>
+            <li><a href="/">Contact</a></li>
+            <li><a href="/">Blog</a></li>
+          </ul>
+          <ul>
+            <li><a href="/">Careers</a></li>
+            <li><a href="/">Support</a></li>
+            <li><a href="/">Privacy Policy</a></li>
+          </ul>
+        </div>
+      </div>
 
-  Request Invite
+      <div class="copyrights">
+        <div>
+          <a href="#" class="button header__cta">Request Invite</a>
+        </div>
+        <p>© Easybank. All Rights Reserved</p>
+      </div>
 
-  © Easybank. All Rights Reserved -->
+    </div>
 
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+
+  </footer>
+
+  
 
   <script src="app/js/script.js"></script>
 </body>
